--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -1,5 +1,9 @@
+$back-black: #292b2c;
+$back-color2: #50beb7;
+
 ul{
   padding: 0;
+  list-style: none;
 }
 .hidden{
   display: none;
@@ -9,6 +13,59 @@ ul{
   margin: auto;
   text-align: center;
 }
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 60px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: $back-color2; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 50%; /* Rounded corners */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+
+
+footer{
+  background-color: $back-black;
+  color: white;
+  position: relative;
+  padding: 15px;
+  .reference{
+    position: absolute;
+    font-size: 14px;
+    bottom: 0;
+    left: 10px;
+    padding: 15px;
+    font-style: italic;
+  }
+  .link_footer{
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+    padding: 15px;
+    font-size: 14px;
+    ul{
+      margin: 0;
+      margin-right: 20px;
+
+      li{
+        font-size: 16px;
+        margin-right: 10px;
+        display: inline-block;
+      }
+    }
+  }
+}
+
 
 .slick-arrow{
   position: absolute;
@@ -41,6 +98,10 @@ ul{
     background-color: rgba(255,255,255,0.7);
     padding: 25px 40px;
     color: black;
+    -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb( 212, 215, 223 );
+    box-shadow: 1.5px 2.598px 6px 0 rgb(66, 66, 66);
+    -webkit-transition-duration: .4s;
+    transition-duration: .4s;
     .top_title{
       text-transform: uppercase;
     }
@@ -62,8 +123,19 @@ ul{
   .wrapper_skill{
     margin: 0;
     margin-bottom: 20px;
-
     color: white;
+    &.lg-size {
+      -webkit-transition-duration: .4s;
+      transition-duration: .4s;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb(212, 215, 223);
+      box-shadow: 1.5px 2.598px 6px 0 rgb(212, 215, 223);
+    }
+    &.md-size .container_content{
+      -webkit-transition-duration: .4s;
+      transition-duration: .4s;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb(212, 215, 223);
+      box-shadow: 1.5px 2.598px 6px 0 rgb(212, 215, 223);
+    }
     .container_gif{
       background-size: cover;
       background-repeat: no-repeat;
@@ -73,7 +145,7 @@ ul{
       &:before , &:after{
         content: "";
         display: block;
-        background-color: #292b2c;
+        background-color: $back-black;
         position: absolute;
         top: -25%;
         right: -75%;
@@ -86,7 +158,7 @@ ul{
       &:after{
         content: "";
         display: block;
-        background-color: #292b2c;
+        background-color: $back-black;
         position: absolute;
         bottom: -25%;
         right: -75%;
@@ -99,7 +171,7 @@ ul{
       }
     }
     .container_content{
-      background-color: #292b2c;
+      background-color: $back-black;
       padding: 25px 40px;
       .title{
         font-weight: 500;
@@ -122,6 +194,10 @@ ul{
         }
       }
     }
+    > .col-md-6 .container_content{
+      background-color: $back-color2;
+
+    }
     > .col-md-6:first-child{
       padding-left: 0;
     }
@@ -132,7 +208,6 @@ ul{
 }
 
 #xp{
-  background-color: #50beb7;
   padding: 40px 0px;
   .title{
     font-weight: 500;
@@ -196,8 +271,17 @@ ul{
   .title{
     text-transform: uppercase;
     border-bottom: 1px solid white;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
     color: white;
+    position: relative;
+    a{
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: inline-block;
+      width: auto;
+      font-size: inherit;
+    }
   }
   .list_hobbies{
     margin-top: 35px;
@@ -205,13 +289,29 @@ ul{
     font-size: 14px;
     font-weight: 200;
     font-style: italic;
-    .fa{
+    .hobbie .fa{
+      cursor: pointer;
       font-size: 35px;
       display: inline-block;
       margin-bottom: 10px;
+      padding: 20px;
+      background-color: #292b2c;
+      border-radius: 50%;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb( 212, 215, 223 );
+      box-shadow: 1.5px 2.598px 6px 0 rgb(66, 66, 66);
+      border-radius: 50%;
+      -webkit-transition-duration: .4s;
+      transition-duration: .4s;
     }
   }
 
+  .wrapper_hobbies{
+    margin-top: 35px;
+    .sub_title{
+      text-transform: uppercase;
+
+    }
+  }
   .btn_cv{
     font-size: 45px;
     text-align: center;
@@ -233,6 +333,103 @@ ul{
   }
 }
 
-#feed{
+#contact{
+  background-color: $back-color2;
+  padding: 40px 0px;
+  .title{
+    text-transform: uppercase;
+    border-bottom: 1px solid white;
+    margin-bottom: 25px;
+    color: white;
+  }
+  form{
+    textarea{
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      border: 0;
+      -webkit-transition-duration: .4s;
+      transition-duration: .4s;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 #949596 inset;
+      box-shadow: 1.5px 2.598px 6px 0 #949596 inset;
+    }
 
+    input,select,button{
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 0;
+      border-radius: 0;
+      -webkit-transition-duration: .4s;
+      transition-duration: .4s;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 #949596 inset;
+      box-shadow: 1.5px 2.598px 6px 0 #949596 inset;
+    }
+    button{
+      text-align: center;
+      background-color: $back-black;
+      -webkit-box-shadow: 1.5px 2.598px 6px 0 #414244 inset;
+      box-shadow: 1.5px 2.598px 6px 0 #414244 inset;
+      color: white;
+    }
+
+  }
+}
+
+#feed{
+ .wrapper_feed{
+   position: relative;
+   .list_cat_feed{
+    position: absolute;
+     top: 0px;
+     left: -35px;
+     cursor: pointer;
+   }
+   li.block_feed {
+     background-color: #292b2c;
+     color: white;
+     position: relative;
+     margin-bottom: 30px;
+     -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb( 212, 215, 223 );
+     box-shadow: 1.5px 2.598px 6px 0 rgb(66, 66, 66);
+
+     .picto{
+       position: absolute;
+       top:15px;
+       right: 15px;
+       font-size: 25px;
+     }
+     .title_post{
+       padding: 15px 0;
+       font-size: 16px;
+     }
+
+     .data-post{
+       position: absolute;
+       bottom: 15px;
+       right: 15px;
+       p{
+         margin: 0;
+       }
+     }
+     .back_img_post{
+       background-position: center;
+       background-repeat: no-repeat;
+       background-size: cover;
+       padding-top: 80px;
+       .title_post{
+         padding: 15px;
+         background-color: rgba(255, 255, 255, 0.31);
+         text-transform: uppercase;
+         font-size: 16px;
+       }
+     }
+     .content{
+       padding: 15px;
+       padding-bottom: 45px;
+        font-size: 14px;
+       line-height: 16px;
+     }
+   }
+ }
 }
