--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -52,6 +52,8 @@ footer {
     left: 10px;
     padding: 15px;
     font-style: italic; }
+  footer h2 {
+    font-size: 14px; }
   footer .link_footer {
     position: absolute;
     bottom: 0;
@@ -65,6 +67,30 @@ footer {
         font-size: 16px;
         margin-right: 10px;
         display: inline-block; }
+
+.title.border_center {
+  position: relative;
+  text-align: center;
+  width: 70%;
+  margin: auto; }
+  .title.border_center:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    background-color: black;
+    z-index: -1;
+    left: 0; }
+  .title.border_center span {
+    position: relative;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    background-color: white;
+    z-index: 10;
+    text-align: center;
+    padding: 0 5%; }
 
 .slick-arrow {
   position: absolute;
@@ -109,6 +135,13 @@ footer {
     border-bottom: 1px solid white;
     margin-bottom: 15px;
     color: white; }
+  #skills .view_project {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    font-size: 12px;
+    padding: 5px 10px;
+    background-color: #6a8293; }
   #skills .wrapper_skill {
     margin: 0;
     margin-bottom: 20px;
@@ -160,7 +193,7 @@ footer {
         transform: rotate(-65deg); }
     #skills .wrapper_skill .container_content {
       background-color: #292b2c;
-      padding: 25px 40px; }
+      padding: 25px 32px; }
       #skills .wrapper_skill .container_content .title {
         font-weight: 500;
         text-transform: uppercase;
@@ -169,10 +202,17 @@ footer {
       #skills .wrapper_skill .container_content .desc {
         font-size: 16px;
         line-height: 18px;
-        margin-bottom: 10px; }
+        margin-bottom: 20px; }
       #skills .wrapper_skill .container_content .list_picto {
         list-style: none;
-        padding: 0; }
+        padding: 0;
+        border-left: 1px solid white;
+        font-size: 13px;
+        text-transform: uppercase;
+        width: 80%;
+        margin-left: 0px;
+        color: #6a8293;
+        font-style: italic; }
         #skills .wrapper_skill .container_content .list_picto li {
           display: inline-block;
           margin: 0px 15px; }
@@ -194,7 +234,7 @@ footer {
     display: flex;
     align-items: center;
     flex-wrap: wrap; }
-  #xp .list_xp li[data-name] {
+  #xp .list_xp li[data-id] {
     background-color: rgba(255, 255, 255, 0.2);
     padding: 8px;
     height: 150px; }
@@ -315,6 +355,7 @@ footer {
     color: white; }
 
 #feed .wrapper_feed {
+  margin-top: 40px;
   position: relative; }
   #feed .wrapper_feed .list_cat_feed {
     position: absolute;
@@ -349,9 +390,10 @@ footer {
       padding-top: 80px; }
       #feed .wrapper_feed li.block_feed .back_img_post .title_post {
         padding: 15px;
-        background-color: rgba(255, 255, 255, 0.31);
+        background-color: rgba(0, 0, 0, 0.6);
         text-transform: uppercase;
-        font-size: 16px; }
+        font-size: 16px;
+        color: white; }
     #feed .wrapper_feed li.block_feed .content {
       padding: 15px;
       padding-bottom: 45px;
