--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -47,6 +47,9 @@ footer{
     padding: 15px;
     font-style: italic;
   }
+  h2{
+    font-size: 14px;
+  }
   .link_footer{
     position: absolute;
     bottom: 0;
@@ -66,6 +69,33 @@ footer{
   }
 }
 
+
+.title.border_center {
+  position: relative;
+  text-align: center;
+  width: 70%;
+  margin: auto;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    background-color: black;
+    z-index: -1;
+    left: 0;
+  }
+  span{
+    position: relative;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    background-color: white;
+    z-index: 10;
+    text-align: center;
+    padding: 0 5%;
+  }
+}
 
 .slick-arrow{
   position: absolute;
@@ -120,6 +150,14 @@ footer{
     margin-bottom: 15px;
     color: white;
   }
+  .view_project{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    font-size: 12px;
+    padding: 5px 10px;
+    background-color: #6a8293;
+  }
   .wrapper_skill{
     margin: 0;
     margin-bottom: 20px;
@@ -172,7 +210,7 @@ footer{
     }
     .container_content{
       background-color: $back-black;
-      padding: 25px 40px;
+      padding: 25px 32px;
       .title{
         font-weight: 500;
         text-transform: uppercase;
@@ -182,12 +220,19 @@ footer{
       .desc{
         font-size: 16px;
         line-height: 18px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
 
       }
       .list_picto{
         list-style: none;
         padding: 0;
+        border-left: 1px solid white;
+        font-size: 13px;
+        text-transform: uppercase;
+        width: 80%;
+        margin-left: 0px;
+        color: #6a8293;
+        font-style: italic;
         li{
           display: inline-block;
           margin: 0px 15px;
@@ -221,7 +266,7 @@ footer{
       align-items: center;
       flex-wrap: wrap;
     }
-    li[data-name]{
+    li[data-id]{
       background-color: rgba(255,255,255,0.2);
       padding: 8px;
       height: 150px;
@@ -378,6 +423,7 @@ footer{
 
 #feed{
  .wrapper_feed{
+   margin-top: 40px;
    position: relative;
    .list_cat_feed{
     position: absolute;
@@ -401,7 +447,7 @@ footer{
      }
      .title_post{
        padding: 15px 0;
-       font-size: 16px;
+       font-size: 16px
      }
 
      .data-post{
@@ -419,9 +465,10 @@ footer{
        padding-top: 80px;
        .title_post{
          padding: 15px;
-         background-color: rgba(255, 255, 255, 0.31);
+         background-color: rgba(0, 0, 0, 0.6);
          text-transform: uppercase;
          font-size: 16px;
+         color: white;
        }
      }
      .content{
