--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -136,14 +136,20 @@ footer {
     transition-duration: .4s; }
     .banner .title .btn {
       margin-top: 40px;
-      border: 1px solid;
-      padding: .5rem 2.5rem;
-      border-radius: 0; }
+      padding: .7rem 3rem;
+      border-radius: 0;
+      background-color: rgba(249, 249, 249, 0.68);
+      text-transform: uppercase;
+      font-weight: 200;
+      font-size: 13px;
+      cursor: pointer; }
     .banner .title .top_title {
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      letter-spacing: 6.8px; }
     .banner .title .sub_title {
       text-transform: lowercase;
-      font-size: 2rem; }
+      font-size: 2rem;
+      font-weight: 200; }
 
 #skills {
   margin-top: -140px; }
@@ -187,7 +193,7 @@ footer {
         display: block;
         background-color: #292b2c;
         position: absolute;
-        top: -25%;
+        top: -58%;
         right: -75%;
         width: 100%;
         height: 100%;
@@ -213,17 +219,20 @@ footer {
         transform: rotate(-65deg); }
     #skills .wrapper_skill .container_content {
       background-color: #292b2c;
-      padding: 25px 32px; }
+      padding: 35px 32px;
+      padding-left: 21px; }
       #skills .wrapper_skill .container_content .title {
         font-family: 'Poppins', sans-serif;
         font-weight: 500;
         text-transform: uppercase;
-        font-size: 18px;
-        margin-bottom: 10px; }
+        font-size: 20px;
+        margin-bottom: 10px;
+        position: relative; }
       #skills .wrapper_skill .container_content .desc {
         font-size: 16px;
         line-height: 18px;
-        margin-bottom: 20px; }
+        margin-bottom: 20px;
+        font-weight: 100; }
       #skills .wrapper_skill .container_content .list_picto {
         list-style: none;
         padding: 0;
@@ -236,7 +245,8 @@ footer {
         font-style: italic; }
         #skills .wrapper_skill .container_content .list_picto li {
           display: inline-block;
-          margin: 0px 15px; }
+          margin: 0px 15px;
+          cursor: pointer; }
     #skills .wrapper_skill > .col-md-6 .container_content {
       background-color: #50beb7;
       height: 100%; }
@@ -422,7 +432,8 @@ footer {
     position: relative;
     margin-bottom: 30px;
     -webkit-box-shadow: 1.5px 2.598px 6px 0 #d4d7df;
-    box-shadow: 1.5px 2.598px 6px 0 #424242; }
+    box-shadow: 1.5px 2.598px 6px 0 #424242;
+    overflow: hidden; }
     #feed .wrapper_feed li.block_feed .picto {
       position: absolute;
       top: 15px;
@@ -441,19 +452,22 @@ footer {
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      padding-top: 80px; }
+      padding-top: 115px; }
       #feed .wrapper_feed li.block_feed .back_img_post .title_post {
         padding: 15px;
         background-color: rgba(0, 0, 0, 0.6);
         text-transform: uppercase;
-        font-size: 16px;
-        color: white; }
+        font-size: 15px;
+        color: white;
+        font-weight: 400;
+        letter-spacing: .4px; }
     #feed .wrapper_feed li.block_feed .content {
-      padding: 15px;
+      margin: 30px;
       padding-bottom: 45px;
-      font-size: 14px;
+      font-size: 12px;
       line-height: 16px;
-      overflow: hidden; }
+      overflow: hidden;
+      font-weight: 200; }
 
 @media screen and (max-width: 780px) {
   .banner {
