--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -156,16 +156,22 @@ footer{
     transition-duration: .4s;
     .btn{
       margin-top: 40px;
-      border: 1px solid;
-      padding: .5rem 2.5rem;
+      padding: .7rem 3rem;
       border-radius: 0;
+      background-color: rgba(249, 249, 249, 0.68);
+      text-transform: uppercase;
+      font-weight: 200;
+      font-size: 13px;
+      cursor: pointer;
     }
     .top_title{
       text-transform: uppercase;
+      letter-spacing: 6.8px;
     }
     .sub_title{
       text-transform: lowercase;
       font-size: 2rem;
+      font-weight: 200;
     }
   }
 }
@@ -216,7 +222,7 @@ footer{
         display: block;
         background-color: $back-black;
         position: absolute;
-        top: -25%;
+        top: -58%;
         right: -75%;
         width: 100%;
         height: 100%;
@@ -241,18 +247,21 @@ footer{
     }
     .container_content{
       background-color: $back-black;
-      padding: 25px 32px;
+      padding: 35px 32px;
+      padding-left: 21px;
       .title{
         font-family: 'Poppins', sans-serif;
         font-weight: 500;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        position: relative;
       }
       .desc{
         font-size: 16px;
         line-height: 18px;
         margin-bottom: 20px;
+        font-weight: 100;
 
       }
       .list_picto{
@@ -268,6 +277,7 @@ footer{
         li{
           display: inline-block;
           margin: 0px 15px;
+          cursor: pointer;
         }
       }
     }
@@ -512,7 +522,7 @@ footer{
      margin-bottom: 30px;
      -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb( 212, 215, 223 );
      box-shadow: 1.5px 2.598px 6px 0 rgb(66, 66, 66);
-
+     overflow: hidden;
      .picto{
        position: absolute;
        top:15px;
@@ -536,21 +546,24 @@ footer{
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
-       padding-top: 80px;
+       padding-top: 115px;
        .title_post{
          padding: 15px;
          background-color: rgba(0, 0, 0, 0.6);
          text-transform: uppercase;
-         font-size: 16px;
+         font-size: 15px;
          color: white;
+         font-weight: 400;
+         letter-spacing: .4px;
        }
      }
      .content{
-       padding: 15px;
+       margin: 30px;
        padding-bottom: 45px;
-        font-size: 14px;
+       font-size: 12px;
        line-height: 16px;
        overflow: hidden;
+       font-weight: 200;
      }
    }
  }
