--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -163,6 +163,7 @@ footer{
       font-weight: 200;
       font-size: 13px;
       cursor: pointer;
+      color: black;
     }
     .top_title{
       text-transform: uppercase;
