--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -1,6 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
 $back-black: #292b2c;
 $back-color2: #50beb7;
+
+
+body {
+  font: 300 15px 'Montserrat', Helvetica, Arial, sans-serif;
+  b, strong {
+    font-weight: bold;
+  }
+  a{
+    color: white;
+  }
+}
 
 ul{
   padding: 0;
@@ -106,6 +119,25 @@ footer{
   }
 }
 
+.navbar-nav{
+  li{
+    position: relative;
+  }
+  li+li{
+    padding-left: 25px;
+    &:before{
+      position: absolute;
+      left: 0;
+      content: ".";
+      color: #50beb7;
+      font-weight: bold;
+      padding: .5em;
+      font-size: 22px;
+      line-height: 10px;
+    }
+  }
+}
+
 .nav-top{
   background-color: rgba(0, 0, 0, 0.33);
   &.navbar-inverse .navbar-nav .nav-link {
@@ -119,6 +151,16 @@ footer{
   }
   .nav-link{
     color: rgb(255, 255, 255);
+    position: relative;
+  }
+  li+li{
+    padding-left: 20px;
+    &:before{
+      position: absolute;
+      left: 0;
+      content: ".";
+      color: #50beb7;
+    }
   }
 }
 .nav-link{
@@ -147,8 +189,8 @@ footer{
     font-family: 'Poppins', sans-serif;
     text-align: center;
     margin: 150px 150px 300px 150px;
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 25px 40px;
+    background-color: rgba(255, 255, 255, 0.72);
+    padding: 50px 40px;
     color: #040404;
     -webkit-box-shadow: 1.5px 2.598px 6px 0 rgb( 212, 215, 223 );
     box-shadow: 1.5px 2.598px 6px 0 rgb(66, 66, 66);
@@ -171,7 +213,7 @@ footer{
     }
     .sub_title{
       text-transform: lowercase;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: 200;
     }
   }
@@ -259,7 +301,7 @@ footer{
         position: relative;
       }
       .desc{
-        font-size: 16px;
+        font-size: 14px;
         line-height: 18px;
         margin-bottom: 20px;
         font-weight: 100;
