--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -422,6 +422,29 @@ footer{
       width: auto;
       font-size: inherit;
     }
+    &.sub{
+      margin-bottom: 30px;
+      margin-top: 50px;
+      text-align: left;
+      padding-left: 50px;
+      position: relative;
+      &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 5px;
+        width: 60px;
+        bottom: -10px;
+        left: 0px;
+        background-color: white;
+      }
+    }
+  }
+  .small-3{
+    font-size: 12px;
+    margin-top: 21px;
+    font-style: italic;
+    font-weight: 100;
   }
 
   .contant_presentation{
@@ -443,7 +466,6 @@ footer{
   }
 
   .list_hobbies{
-    margin-top: 35px;
     text-align: center;
     font-size: 14px;
     font-weight: 200;
@@ -458,7 +480,7 @@ footer{
   }
 
   .wrapper_hobbies{
-    margin-top: 50px;
+    margin-top: 0px;
     .sub_title{
       text-transform: uppercase;
 
