--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -426,7 +426,6 @@ footer{
       margin-bottom: 30px;
       margin-top: 50px;
       text-align: left;
-      padding-left: 50px;
       position: relative;
       &:before {
         content: "";
@@ -442,9 +441,24 @@ footer{
   }
   .small-3{
     font-size: 12px;
-    margin-top: 21px;
     font-style: italic;
     font-weight: 100;
+    margin-top: 12px;
+  }
+
+  .wrapper-fiche-projet{
+    padding: 15px;
+    background-color: #50beb7fc;
+    height: 100%;
+    box-shadow: 1.5px 2.598px 6px 0 #424242;
+  }
+
+  .title_projet{
+    margin-bottom: 21px;
+    font-size: 17px;
+    &:hover{
+      color: white;
+    }
   }
 
   .contant_presentation{
