--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -139,7 +139,7 @@ footer {
 
 .nav-link {
   display: inline-block;
-  color: #a5a39f; }
+  color: #a5a39e; }
   .nav-link.logo {
     background-color: rgba(0, 0, 0, 0.48);
     font-weight: bold; }
