--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -6,6 +6,8 @@ body {
     font-weight: bold; }
   body a {
     color: white; }
+    body a:hover, body a:focus {
+      color: white; }
 
 ul {
   padding: 0;
@@ -185,7 +187,8 @@ footer {
       font-weight: 200; }
 
 #skills {
-  margin-top: -140px; }
+  margin-top: -140px;
+  margin-bottom: 60px; }
   #skills > .title {
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
@@ -203,7 +206,7 @@ footer {
     background-color: #6a8293; }
   #skills .wrapper_skill {
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     color: white; }
     #skills .wrapper_skill.lg-size {
       -webkit-transition-duration: .4s;
@@ -252,14 +255,14 @@ footer {
         transform: rotate(-65deg); }
     #skills .wrapper_skill .container_content {
       background-color: #292b2c;
-      padding: 35px 32px;
-      padding-left: 21px; }
+      padding: 50px 100px;
+      padding-left: 43px; }
       #skills .wrapper_skill .container_content .title {
         font-family: 'Poppins', sans-serif;
         font-weight: 500;
         text-transform: uppercase;
         font-size: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
         position: relative; }
       #skills .wrapper_skill .container_content .desc {
         font-size: 14px;
@@ -289,7 +292,7 @@ footer {
       padding-right: 0; }
 
 #xp {
-  padding: 40px 0px; }
+  padding: 60px 0px; }
   #xp .title {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -335,13 +338,73 @@ footer {
       cursor: pointer;
       z-index: 1; }
 
+.wrapper_bg_image.hover_zoom {
+  overflow: hidden; }
+
+.wrapper_bg_image.hover_zoom:hover .background_image {
+  transform: scale(1.1); }
+
+.background_image {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  transition: all .5s; }
+
+.project-skills {
+  position: relative;
+  margin-bottom: 30px; }
+  .project-skills:hover .wrapper-info-pojet {
+    top: 225px; }
+
+.wrapper-fiche-projet {
+  min-height: 300px;
+  padding: 30px;
+  background-position: top; }
+
+.wrapper-info-pojet {
+  transition: all .5s;
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: calc(100% - 50px);
+  padding: 25px;
+  height: calc(100% - 50px);
+  background-color: #50beb7c9; }
+  .wrapper-info-pojet .title {
+    font-size: 25px;
+    margin-bottom: 25px;
+    color: white; }
+  .wrapper-info-pojet .list_skill {
+    list-style: none;
+    padding: 0;
+    border-left: 1px solid white;
+    font-size: 13px;
+    text-transform: uppercase;
+    width: 80%;
+    margin-left: 0px;
+    color: #292b2c;
+    font-style: italic; }
+    .wrapper-info-pojet .list_skill li {
+      display: inline-block;
+      margin: 0px 15px;
+      cursor: pointer; }
+
 #hobbies {
   background: url(../img/wall_perso.jpg) center 0 no-repeat fixed;
   background-position: center;
   background-size: cover;
   color: white;
-  padding: 40px 0px;
+  padding: 60px 0px;
   margin-top: 0px; }
+  #hobbies .photo_perso {
+    text-align: right; }
+    #hobbies .photo_perso img {
+      border-radius: 500px;
+      border: 4px solid #80808087;
+      max-width: 100%;
+      width: 150px; }
   #hobbies .title {
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
@@ -378,7 +441,7 @@ footer {
     margin-top: 12px; }
   #hobbies .wrapper-fiche-projet {
     padding: 15px;
-    background-color: #50beb7fc;
+    background-color: #50beb7;
     height: 100%;
     box-shadow: 1.5px 2.598px 6px 0 #424242; }
   #hobbies .title_projet {
@@ -430,7 +493,7 @@ footer {
 
 #contact {
   background-color: #50beb7;
-  padding: 40px 0px; }
+  padding: 60px 0px; }
   #contact .title {
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
