--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 $back-black: #292b2c;
-$back-color2: #50beb7;
+$back-color2: rgb(80,190,183);
 
 
 body {
@@ -12,6 +12,9 @@ body {
   }
   a{
     color: white;
+    &:hover,&:focus{
+      color: white;
+    }
   }
 }
 
@@ -129,7 +132,7 @@ footer{
       position: absolute;
       left: 0;
       content: ".";
-      color: #50beb7;
+      color: $back-color2;
       font-weight: bold;
       padding: .5em;
       font-size: 22px;
@@ -160,7 +163,7 @@ footer{
       position: absolute;
       left: 0;
       content: ".";
-      color: #50beb7;
+      color: $back-color2;
     }
   }
 }
@@ -223,6 +226,7 @@ footer{
 
 #skills{
   margin-top: -140px;
+  margin-bottom: 60px;
   > .title{
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
@@ -242,7 +246,7 @@ footer{
   }
   .wrapper_skill{
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     color: white;
     &.lg-size {
       -webkit-transition-duration: .4s;
@@ -292,14 +296,14 @@ footer{
     }
     .container_content{
       background-color: $back-black;
-      padding: 35px 32px;
-      padding-left: 21px;
+      padding: 50px 100px;
+      padding-left: 43px;
       .title{
         font-family: 'Poppins', sans-serif;
         font-weight: 500;
         text-transform: uppercase;
         font-size: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
         position: relative;
       }
       .desc{
@@ -341,7 +345,7 @@ footer{
 }
 
 #xp{
-  padding: 40px 0px;
+  padding: 60px 0px;
   .title{
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -400,14 +404,84 @@ footer{
   }
 }
 
+.wrapper_bg_image.hover_zoom {overflow: hidden;}
+.wrapper_bg_image.hover_zoom:hover .background_image {
+  transform: scale(1.1);
+}
+.background_image {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  transition: all .5s;
+}
+
+.project-skills{
+  position: relative;
+  margin-bottom: 30px;
+  &:hover{
+    .wrapper-info-pojet {
+      top: 225px;
+    }
+  }
+}
+.wrapper-fiche-projet{
+  min-height: 300px;
+  padding: 30px;
+  background-position: top;
+}
+.wrapper-info-pojet{
+  transition: all .5s;
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: calc(100% - 50px);
+  padding: 25px;
+  height: calc(100% - 50px);
+  background-color: #50beb7c9;
+
+  .title {
+    font-size: 25px;
+    margin-bottom: 25px;
+    color: white;
+  }
+  .list_skill{
+    list-style: none;
+    padding: 0;
+    border-left: 1px solid white;
+    font-size: 13px;
+    text-transform: uppercase;
+    width: 80%;
+    margin-left: 0px;
+    color: $back-black;
+    font-style: italic;
+    li{
+      display: inline-block;
+      margin: 0px 15px;
+      cursor: pointer;
+    }
+
+  }
+}
+
 #hobbies{
   background: url(../img/wall_perso.jpg) center 0 no-repeat fixed;
   background-position: center;
   background-size: cover;
   color: white;
-  padding: 40px 0px;
+  padding: 60px 0px;
   margin-top: 0px;
 
+  .photo_perso{
+    text-align: right;
+    img{
+      border-radius: 500px;
+      border: 4px solid #80808087;
+      max-width: 100%;
+      width: 150px;
+    }
+  }
   .title{
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
@@ -450,7 +524,7 @@ footer{
 
   .wrapper-fiche-projet{
     padding: 15px;
-    background-color: #50beb7fc;
+    background-color: $back-color2;
     height: 100%;
     box-shadow: 1.5px 2.598px 6px 0 #424242;
   }
@@ -525,7 +599,7 @@ footer{
 
 #contact{
   background-color: $back-color2;
-  padding: 40px 0px;
+  padding: 60px 0px;
   .title{
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
